--- a/.github/workflows /gh-pages.yml
+++ b/.github/workflows /gh-pages.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        # with:
-        #   submodules: true # Fetch Hugo themes (true OR recursive)
+        with:
+          submodules: true # Fetch Hugo themes (true OR recursive)
         #   fetch-depth: 0 # Fetch all history for .GitInfo and .Lastmod
 
       - name: Setup Hugo
