--- a/config.yml
+++ b/config.yml
@@ -1,106 +1,105 @@
-baseURL = 'https://dn.institute/'
-languageCode = 'en-us'
-title = 'Distributed Networks Institute'
-theme = 'hugo-book'
+---
+baseURL: 'https://dn.institute/'
+languageCode: 'en-us'
+title: 'Distributed Networks Institute'
+theme: 'hugo-book'
 
 # Book configuration
-disablePathToLower = true
-enableGitInfo = true
+disablePathToLower: true
+enableGitInfo: true
 
 # Needed for mermaid/katex shortcodes
-[markup]
-[markup.goldmark.renderer]
-  unsafe = true
+markup:
+  goldmark.renderer:
+    unsafe: true
 
-[markup.tableOfContents]
-  startLevel = 1
+  tableOfContents:
+    startLevel: 1
 
-[menu]
-[[menu.incidents]]
-  name = "Recent"
-  url = "/posts"
-  weight = 10
+menu:
+  incidents:
+    - name: "Recent"
+      url: "/posts"
+      weight: 10
   
-[[menu.incidents]]
-  name = "By Category"
-  url = "/categories"
-  weight = 20
+    - name: "By Category"
+      url: "/categories"
+      weight: 20
 
-[[menu.incidents]]
-  name = "By Custodian"
-  url = "/custodians"
-  weight = 30
+    - name: "By Custodian"
+      url: "/custodians"
+      weight: 30
 
-[[menu.external]]
-  name = "Github"
-  url = "https://github.com/1712n/dni-website"
-  weight = 10
+  external:
+    - name: "Github"
+      url: "https://github.com/1712n/dni-website"
+      weight: 10
 
-[taxonomies]
-  category = "categories"
-  custodian = "custodians"
+taxonomies:
+  category: "categories"
+  custodian: "custodians"
 
-[params]
+params:
   # (Optional, default light) Sets color theme: light, dark or auto.
   # Theme 'auto' switches between dark and light modes based on browser/os preferences
-  BookTheme = 'light'
+  BookTheme: 'light'
 
   # (Optional, default true) Controls table of contents visibility on right side of pages.
   # Start and end levels can be controlled with markup.tableOfContents setting.
   # You can also specify this parameter per page in front matter.
-  BookToC = true
+  BookToC: true
 
   # (Optional, default none) Set the path to a logo for the book. If the logo is
   # /static/logo.png then the path would be logo.png
-  BookLogo = 'dni-circle.png'
+  BookLogo: 'dni-circle.png'
 
   # (Optional, default docs) Specify root page to render child pages as menu.
   # Page is resoled by .GetPage function: https://gohugo.io/functions/getpage/
   # For backward compatibility you can set '*' to render all sections to menu. Acts same as '/'
-  BookSection = 'docs'
+  BookSection: 'docs'
 
   # Set source repository location.
   # Used for 'Last Modified' and 'Edit this page' links.
-  BookRepo = 'https://github.com/1712n/dni-website'
+  BookRepo: 'https://github.com/1712n/dni-website'
 
   # (Optional, default 'commit') Specifies commit portion of the link to the page's last modified
   # commit hash for 'doc' page type.
   # Requires 'BookRepo' param.
   # Value used to construct a URL consisting of BookRepo/BookCommitPath/<commit-hash>
   # Github uses 'commit', Bitbucket uses 'commits'
-  # BookCommitPath = 'commit'
+  # BookCommitPath: 'commit'
 
   # Enable "Edit this page" links for 'doc' page type.
   # Disabled by default. Uncomment to enable. Requires 'BookRepo' param.
   # Edit path must point to root directory of repo.
-  BookEditPath = 'edit/main/'
+  BookEditPath: 'edit/main/'
 
   # Configure the date format used on the pages
   # - In git information
   # - In blog posts
-  BookDateFormat = 'January 2, 2006'
+  BookDateFormat: 'January 2, 2006'
 
   # (Optional, default true) Enables search function with flexsearch,
   # Index is built on fly, therefore it might slowdown your website.
   # Configuration for indexing can be adjusted in i18n folder per language.
-  BookSearch = true
+  BookSearch: true
 
   # (Optional, default true) Enables comments template on pages
   # By default partals/docs/comments.html includes Disqus template
   # See https://gohugo.io/content-management/comments/#configure-disqus
   # Can be overwritten by same param in page frontmatter
-  # BookComments = true
+  # BookComments: true
 
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables portable links and link checks in markdown pages.
   # Portable links meant to work with text editors and let you write markdown without {{< relref >}} shortcode
   # Theme will print warning if page referenced in markdown does not exists.
-  BookPortableLinks = true
+  BookPortableLinks: true
 
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables service worker that caches visited pages and resources for offline use.
-  BookServiceWorker = true
+  BookServiceWorker: true
 
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables a drop-down menu for translations only if a translation is present.
-  # BookTranslatedOnly = false
+  # BookTranslatedOnly: false
