--- a/config.yml
+++ b/config.yml
@@ -18,7 +18,7 @@ markup:
 
 menu:
   external:
-    - name: "Github"
+    - name: " Github"
       url: "https://github.com/1712n/dni-website"
       weight: 10
 
