Don't expand terms

--- a/config/_default/config.yml
+++ b/config/_default/config.yml
@@ -41,6 +41,9 @@ cascade:
   type: docs 
 
 params:
+  # Expand taxonomy terms in the sidebar menu
+  expandTerms: false
+
   # (Optional, default light) Sets color theme: light, dark or auto.
   # Theme 'auto' switches between dark and light modes based on browser/os preferences
   BookTheme: 'light'
