--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,5 +4,4 @@
 *       @1712n/dni-infrastructure
 
 # Someone from the Crypto Attack Wiki Team needs to approve changes to the Crypto Attack Wiki
-/content/docs/attacks/    @1712n/crypto-attack-wiki-team
-/content/posts/           @1712n/crypto-attack-wiki-team
+/content/attacks/    @1712n/crypto-attack-wiki-team
