--- a/.github/workflows/fact-check-comment.yaml
+++ b/.github/workflows/fact-check-comment.yaml
@@ -2,22 +2,17 @@ on:
   issue_comment:
     types: [created]
 
+permissions:
+  contents: read
+  issues: read
+  pull-requests: write
+
 jobs:
   fact-check:
     runs-on: ubuntu-latest
     name: "Verify statements in content diff for truthness"
-    if: github.event.issue.pull_request && contains(github.event.comment.body, '/qualitycheck')
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/qualitycheck') && contains(fromJSON('["alxarno", "evgenydmitriev"]'), github.actor)
     steps:
-      - name: Check if user is a member of the team
-        uses: tspascoal/get-user-teams-membership@v2
-        id: checkUserMember
-        with:
-          username: ${{ github.actor }}
-          team: 'Crypto Attack Wiki Team'
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - if: ${{ steps.checkUserMember.outputs.isTeamMember == 'false' }}
-        run: exit 1
-
       - uses: actions/checkout@v3
 
       - name: Install poetry
