--- a/.github/workflows/fact-check.yml
+++ b/.github/workflows/fact-check.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: main
 
       - name: Install poetry
         run: pipx install poetry
