--- a/.github/workflows/fact-check.yml
+++ b/.github/workflows/fact-check.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Run fact-checking script
         run: | 
           poetry run python fact-check.py \
-            --repo-url "${{ github.event.pull_request.head.repo.clone_url }}" \
+            --repo-url "${{ github.event.pull_request.base.repo.clone_url }}" \
             --pull-request-head "${{ github.event.pull_request.head.ref }}" \
             --pull-request-base "${{ github.event.pull_request.base.ref }}" \
             --pull-request-number "${{ github.event.pull_request.number }}" \
