Restrict triggering to allowed actors

--- a/.github/workflows/payout-calc.yml
+++ b/.github/workflows/payout-calc.yml
@@ -11,7 +11,8 @@ jobs:
   payout-calc:
     runs-on: ubuntu-latest
     name: "Calculate author payout"
-    if: github.event.issue.pull_request && github.event.pull_request.merged == true && contains(github.event.comment.body, '/payout')
+    # TODO: Is it possible to use an environment variable to better manage the list of allowed actors?
+    if: github.event.issue.pull_request && github.event.pull_request.merged == true && contains(github.event.comment.body, '/payout' && && contains(fromJSON('["celestenoll", "NikoAnita", "LundbergPaul", "eric-oconnor", "alxarno", "evgenydmitriev", "jhirschkorn", "marina-chibizova"]'), github.actor))
     steps:
       - uses: actions/checkout@v3
 
