--- a/.github/workflows/fact-check-comment.yaml
+++ b/.github/workflows/fact-check-comment.yaml
@@ -8,10 +8,23 @@ permissions:
   pull-requests: write
 
 jobs:
+  permission-check-job:
+    runs-on: ubuntu-latest
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/qualitycheck')
+    outputs:
+      permission: ${{ steps.permissions-check.outputs.defined }}
+    steps:
+      - name: Check for Secret availability
+        id: permissions-check
+        shell: bash
+        run: |
+          echo "defined=${{ contains(fromJSON(secrets.WIKI_REVIEWERS), github.actor) }}" >> $GITHUB_OUTPUT;
+
   fact-check:
     runs-on: ubuntu-latest
     name: "Verify statements in content diff for truthness"
-    if: github.event.issue.pull_request && contains(github.event.comment.body, '/qualitycheck') && contains(fromJSON('["celestenoll", "NikoAnita", "LundbergPaul", "eric-oconnor", "alxarno", "evgenydmitriev", "jhirschkorn", "marina-chibizova"]'), github.actor)
+    needs: [permission-check-job]
+    if: needs.permission-check-job.outputs.permission == 'true'
     steps:
       - uses: actions/checkout@v3
 
