--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,24 @@
 [tool.poetry]
-name = "fact-check"
+name = "tools"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = []
 readme = "README.md"
+packages = [
+    { include = "tools" }
+]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.8"
 PyGithub = "^1.58.2"
 requests = "^2.31.0"
 duckduckgo-search = "^3.1.1"
 openai = "^0.27.7"
 tiktoken = "^0.4.0"
+
+[tool.poetry.scripts]
+fact-check = "tools.fact_checker:main"
+payout-calc = "tools.payout_calc:main"
 
 [build-system]
 requires = ["poetry-core"]
