--- a/config/_default/config.yml
+++ b/config/_default/config.yml
@@ -24,23 +24,13 @@ menu:
         icon: ""
 
 taxonomies:
-  category: "attacks/posts/categories"
-  custodian: "attacks/posts/custodians"
+  attacks/posts/category: "attacks/posts/categories"
+  attacks/posts/custodian: "attacks/posts/custodians"
 
 cascade:
 - _target:
     path: "**/posts/**"
   type: posts
-
-- _target:
-    path: "**/posts/categories"
-  title: Categories
-  type: categories
-
-- _target:
-    path: "**/posts/custodians"
-  title: Custodians
-  type: custodians
 
 - _target:
     path: "**/docs/**"
