--- a/config/_default/config.yml
+++ b/config/_default/config.yml
@@ -24,9 +24,14 @@ menu:
         icon: ""
 
 taxonomies:
-  attacks/posts/target-entity: "attacks/posts/target-entities"
-  attacks/posts/entity-type: "attacks/posts/entity-types"
-  attacks/posts/attack-type: "attacks/posts/attack-types"
+  target-entity: "target-entities"
+  entity-type: "entity-types"
+  attack-type: "attack-types"
+
+permalinks:
+  target-entities: "/attacks/posts/target-entities/:title"
+  entity-types: "/attacks/posts/entity-types/:title"
+  attack-types: "/attacks/posts/attack-types/:title"
 
 cascade:
 - _target:
