--- a/.github/workflows/payout-calc.yml
+++ b/.github/workflows/payout-calc.yml
@@ -10,7 +10,9 @@ permissions:
 jobs:
   permission-check-job:
     runs-on: ubuntu-latest
-    if: github.event.issue.pull_request && github.event.issue.pull_request.merged_at && contains(github.event.comment.body, '/payout')
+    if: |
+      github.event.issue.pull_request &&
+      contains(github.event.comment.body, '/payout')
     outputs:
       permission: ${{ steps.permissions-check.outputs.defined }}
     steps:
@@ -39,7 +41,11 @@ jobs:
 
       - name: Run script 
         run: |
+          _action="${{ github.event.comment.body }}"
+          _name="${_action%% *}"
+          _params="${_action#/*}"
+
           poetry run payout-calc \
             --pull-url "${{ github.event.issue.pull_request.url }}" \
-            --github-token "${{ secrets.GITHUB_TOKEN }}"
-
+            --github-token "${{ secrets.GITHUB_TOKEN }}" \
+            "${_params}"
