--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ requests = "^2.31.0"
 duckduckgo-search = "^3.1.1"
 openai = "^0.27.7"
 tiktoken = "^0.4.0"
+pyyaml = "^6.0.1"
 
 [tool.poetry.scripts]
 fact-check = "tools.fact_checker:main"
