--- a/.github/workflows/payout-calc.yml
+++ b/.github/workflows/payout-calc.yml
@@ -41,7 +41,8 @@ jobs:
 
       - name: Run script 
         run: |
-          _action="${{ github.event.comment.body }}"
+          # Parse command from issue comment
+          _action=$(grep "/payout" <<< "${{ github.event.comment.body }}" | sed 's|.*/|/|')
           _name="$(grep -o '/[^[:space:]]*' <<< "$_action")"
           _params="$(sed 's/^[^ ]* *//' <<< "$_action")"
 
