Workaround menu limitation

--- a/config/_default/config.yml
+++ b/config/_default/config.yml
@@ -42,11 +42,15 @@ permalinks:
   attack-types: "/attacks/posts/attack-types/:title"
 
   # market-health 
-  entities: "/market-health/entities/:title"
+  entities: "/market-health/posts/entities/:title"
 
 cascade:
 - _target:
     path: "**/posts/**"
+  type: posts
+
+- _target:
+    path: "/market-health/posts/**"
   type: posts
 
 - _target:
