--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,12 @@ duckduckgo-search = "^3.1.1"
 openai = "^0.27.7"
 tiktoken = "^0.4.0"
 pyyaml = "^6.0.1"
+pylanguagetool = "^0.9.2"
 
 [tool.poetry.scripts]
 fact-check = "tools.fact_checker:main"
 payout-calc = "tools.payout_calc:main"
+grammar-check =  "tools.grammar_checker:main"
 
 [build-system]
 requires = ["poetry-core"]
