--- a/.github/workflows/grammar-check.yml
+++ b/.github/workflows/grammar-check.yml
@@ -41,11 +41,6 @@ jobs:
 
       - name: Run script 
         run: |
-          _action="${{ github.event.comment.body }}"
-          _name="${_action%% *}"
-          _params="${_action#/*}"
-
           poetry run grammar-check \
             --pull-url "${{ github.event.issue.pull_request.url }}" \
-            --github-token "${{ secrets.GITHUB_TOKEN }}" \
-            "${_params}"
+            --github-token "${{ secrets.GITHUB_TOKEN }}"
