--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -5,7 +5,11 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
-
+  paths:
+      - 'content/**'
+      - 'static/**'
+      - 'themes/**'
+      - 'config/**'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
