--- a/config/development/config.yml
+++ b/config/development/config.yml
@@ -1,7 +1,7 @@
 ---
-baseURL: 'http://localhost:1313/'
+baseURL: "http://localhost:1313/"
 
-buildDrafts: true 
+buildDrafts: true
 
 minify:
-  minifyOutput: false 
+  minifyOutput: false
