--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -5,6 +5,14 @@ on:
     branches:
       - main
 
+  pull_request:
+    types: [ready_for_review, review_requested]
+    paths:
+      - 'assets/**'
+      - 'config/**'
+      - 'layouts/**'
+      - '!content/**'
+
 jobs:
   format:
     runs-on: ubuntu-latest
