--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pyyaml = "^6.0.1"
 pylanguagetool = "^0.9.2"
 markdown2 = "^2.4.10"
 bs4 = "^0.0.1"
+textstat = "^0.7.3"
 
 [tool.poetry.scripts]
 fact-check = "tools.fact_checker:main"
