--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/1712n/dn-institute#readme",
   "dependencies": {
+    "axios": "^1.6.0",
     "chart.js": "^4.4.0"
   }
 }
