--- a/.github/workflows/article-check.yml
+++ b/.github/workflows/article-check.yml
@@ -44,4 +44,4 @@ jobs:
           poetry run article-check \
             --pull-url "${{ github.event.issue.pull_request.url }}" \
             --github-token "${{ secrets.TOKEN }}" \
-            --wp-key "${{ secrets.WP_KEY }}"
+            --api-key "${{ secrets.WP_KEY }}"
