--- a/modules/market-manipulation-widget/package.json
+++ b/modules/market-manipulation-widget/package.json
@@ -2,11 +2,19 @@
   "name": "dn-institute",
   "version": "1.0.0",
   "devDependencies": {
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@types/webpack": "^5.28.5",
     "prettier": "^2.7.1",
-    "prettier-plugin-go-template": "^0.0.13"
+    "prettier-plugin-go-template": "^0.0.13",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
-    "build": "cd modules/ && for i in *; do cd $i && yarn build; done",
+    "start": "webpack --mode=development --watch",
+    "build": "webpack --mode=development",
     "format": "prettier *** --write --cache --cache-location .prettiercache --ignore-unknown --no-error-on-unmatched-pattern",
     "dev:format": "prettier *** --write --ignore-unknown --no-error-on-unmatched-pattern"
   },
@@ -20,6 +28,14 @@
   },
   "homepage": "https://github.com/1712n/dn-institute#readme",
   "dependencies": {
-    "@splidejs/splide": "^4.1.4"
+    "@splidejs/splide": "^4.1.4",
+    "axios": "^1.6.5",
+    "chart.js": "^4.0.0",
+    "chartjs-adapter-moment": "^1.0.1",
+    "chartjs-plugin-zoom": "^2.0.1",
+    "moment": "^2.30.1",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0"
   }
 }
