--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -60,7 +60,9 @@ jobs:
           # For maximum backward compatibility with Hugo modules
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
-        run: hugo --baseURL "${{ steps.pages.outputs.base_url }}/"
+          RAPID_HOST: ${{ secrets.RAPID_HOST }}
+          RAPID_KEY: ${{ secrets.RAPID_KEY }}
+        run: yarn build && hugo --baseURL "${{ steps.pages.outputs.base_url }}/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
