--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ markdown2 = "^2.4.10"
 bs4 = "^0.0.1"
 anthropic = "^0.7.7"
 tenacity = "^8.2.3"
+matplotlib = "3.6.0"
+pandas = "2.0.1"
 
 [tool.poetry.scripts]
 fact-check = "tools.fact_checker:main"
