--- a/modules/market-manipulation-widget/tsconfig.json
+++ b/modules/market-manipulation-widget/tsconfig.json
@@ -9,5 +9,14 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true
-  }
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "./node_modules",
+    "./build",
+    "./dist",
+    "./.vscode"
+  ]
 }
