--- a/tools/config.json
+++ b/tools/config.json
@@ -2,6 +2,7 @@
     "endpoint": "https://preview.webpilotai.com/api/v1/watt",
     "max_tokens": 3596,
     "ANTHROPIC_SEARCH_MODEL": "claude-3-opus-20240229",
+    "ANTHROPIC_SUMMARIZE_MODEL": "claude-3-haiku-20240307",
     "GPT_MODEL": "gpt-3.5-turbo",
     "GPT_retry": 3,
     "GPT_temperature": 0,
