--- a/.github/workflows/duplication-check.yml
+++ b/.github/workflows/duplication-check.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     if: |
       github.event.issue.pull_request &&
-      contains(github.event.comment.body, '/duplecheck')
+      contains(github.event.comment.body, '/articlecheck')
     outputs:
       permission: ${{ steps.permissions-check.outputs.defined }}
     steps:
