--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ description = ""
 authors = []
 readme = "README.md"
 packages = [
-    { include = "tools" },
+    { include = "tools/payout_calc" },
+    { include = "tools/article_checker" },
     { include = "tools/market_health_reporter" },
     { include = "tools/python_modules" }
 ]
@@ -27,10 +28,7 @@ matplotlib = "3.6.0"
 pandas = "2.0.1"
 
 [tool.poetry.scripts]
-fact-check = "tools.fact_checker:main"
 payout-calc = "tools.payout_calc:main"
-grammar-check =  "tools.grammar_checker:main"
-article-check = "tools.article_checker:main"
 article-check-claude = "tools.article_checker_claude:main"
 duplication-check = "tools.duplication_checker:main"
 market-health-reporter = "tools.market_health_reporter:main"
