--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -39,6 +39,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       HUGO_VERSION: 0.108.0
+      HUGO_RAPID_HOST: ${{ secrets.HUGO_RAPID_HOST }}
+      HUGO_RAPID_KEY: ${{ secrets.HUGO_RAPID_KEY }}
     steps:
       - name: Install Hugo CLI
         run: |
