fix: test setup

--- a/tools/similarity_search/package.json
+++ b/tools/similarity_search/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "dev": "wrangler dev src/index.ts",
-    "deploy": "wrangler deploy --minify src/index.ts"
+    "deploy": "wrangler deploy --minify src/index.ts",
+    "test": "vitest"
   },
   "dependencies": {
     "@cloudflare/vitest-pool-workers": "^0.2.6",
