--- a/tools/similarity_search/wrangler.toml
+++ b/tools/similarity_search/wrangler.toml
@@ -1,6 +1,8 @@
 name = "similarity_search"
 compatibility_date = "2023-12-01"
 
+compatibility_flags = ["nodejs_compat"]
+
 # [vars]
 # MY_VAR = "my-variable"
 
