--- a/tools/similarity_search/wrangler.toml
+++ b/tools/similarity_search/wrangler.toml
@@ -1,6 +1,6 @@
 name = "similarity_search"
+main = "src/index.ts"
 compatibility_date = "2023-12-01"
-
 compatibility_flags = ["nodejs_compat"]
 
 # [vars]
