--- a/tools/article_checker_workers/worker-article-rag/package.json
+++ b/tools/article_checker_workers/worker-article-rag/package.json
@@ -11,8 +11,6 @@
     "wrangler": "^3.53.1"
   },
   "dependencies": {
-    "@mozilla/readability": "^0.5.0",
-    "cheerio": "^1.0.0-rc.12",
-    "jsdom": "^24.0.0"
+    "vitest": "^1.6.0"
   }
 }
