--- a/tools/article_checker_worker/package.json
+++ b/tools/article_checker_worker/package.json
@@ -8,6 +8,7 @@
     "start": "wrangler dev"
   },
   "devDependencies": {
-    "wrangler": "^3.0.0"
+    "wrangler": "^3.0.0",
+    "vitest": "^1.5.0"
   }
 }
